# Startweek

./: .gitignore  Readme.md  Zephyr.code-workspace
Project/: CMakeLists.txt  app.overlay  h7ConfigScriptOzone.jdebug  prj.conf
Project/hardware/inc/: adc.h  buttonMatrix.h  buzzers.h  circleMatrix.h  genericGpio.h  gps.h  gyroCompass.h  headingCalculator.h  lcd.h  ledMatrix.h  sevenSegment.h
Project/hardware/src/: adc.c  buttonMatrix.c  buzzers.c  circleMatrix.c  genericGpio.c  gps.c  gyroCompass.c  headingCalculator.c  lcd.c  ledMatrix.c  potmeter.c  sevenSegment.c
Project/hardwareControl/inc/: configure.h  initialize.h
Project/hardwareControl/src/: configure.c  disable.c  idle.c  initialize.c
Project/inc/: gyroCompass.h
Project/inc/actuators/: bigMatrix.h  circleMatrix.h  sevenSegment.h  smallMatrix.h
Project/inc/hardware/: buttonMatrix.h  gps.h  ledCircle.h  ledMatrix.h  sevenSegment.h
Project/inc/minigames/: minigame3.h  minigame7.h
Project/inc/sensors/: lcd.h
Project/main/inc/: locations.h  statemachine.h  threads.h
Project/main/src/: main.c  statemachine.c  threads.c
Project/minigames/inc/: minigame1.h  minigame10.h  minigame2.h  minigame3.h  minigame4.h  minigame5.h  minigame6.h  minigame7.h  minigame8.h  minigame9.h
Project/minigames/src/: minigame1.c  minigame10.c  minigame2.c  minigame3.c  minigame4.c  minigame5.c  minigame6.c  minigame7.c  minigame8.c  minigame9.c
Project/src/: main.c  statemachine.c  walking.c
Project/src/actuators/: bigMatrix.c  circleMatrix.c  smallMatrix.c
Project/src/hardware/: buttonMatrix.c  gps.c  gyroCompass.c  ledCircle.c  ledMatrix.c  sevenSegment.c
Project/src/minigames/: minigame1.c  minigame2.c  minigame4.c  minigame6.c  minigame7.c
Project/src/sensors/: lcd.c
Project/states/inc/: idle.h  minigame1.h  minigame2.h  minigame4.h  minigame6.h
Project/states/src/: idle.c  minigame1.c  minigame2.c  minigame4.c  minigame6.c  minigame9.c
Project/tests/: CMakeLists.txt  prj.conf  runTests.sh  testcase.yaml
Project/tests/inc/: config.h  testButtonMatrix.h  testCircleMatrix.h  testGenericGpio.h  testIntegration.h  testLcd.h  testLedMatrix.h  testSevenSegment.h
Project/tests/src/: main.c  testAccelerometer.c  testButtonMatrix.c  testCircleMatrix.c  testGenericGpio.c  testIntegration.c  testLcd.c  testLedMatrix.c  testSevenSegment.c
